--- a/key_config.yml
+++ b/key_config.yml
@@ -1,4 +1,9 @@
 key_config:
+  DummySeAdaptor:
+    - "tosca.nodes.MiCADO.Container.Application.Docker"
+  DummyPkAdaptor:
+    - "tosca.nodes.MiCADO.Container.Application.Docker"
+
   DockerAdaptor:
     #DockerAdaptor
     - "tosca.nodes.MiCADO.Container.Application.Docker"
