--- a/tests/templates/good_tosca.yaml
+++ b/tests/templates/good_tosca.yaml
@@ -25,7 +25,8 @@ topology_template:
        type: tosca.nodes.MiCADO.Container.Application.Docker
        properties:
          # You may treat this section as you would a key under "services" in D-Compose
-         entrypoint: sh -c "stress-ng --cpu 0 --cpu-method pi -l 10 -t 30 && (echo done >> /tmp/runs)"
+         entrypoint: echo entry
+         command: sleep 10
        artifacts:
          image:
            type: tosca.artifacts.Deployment.Image.Container.Docker
@@ -38,9 +39,6 @@ topology_template:
               type: tosca.relationships.AttachesTo
               properties:
                 location: /tmp
-        - host:
-            node: MICADO-worker
-            relationship: tosca.relationships.HostedOn
 
     stress:
        type: tosca.nodes.MiCADO.Container.Application.Docker
@@ -65,6 +63,11 @@ topology_template:
           type: tosca.artifacts.Deployment.Image.Container.Docker
           file: redis
           repository: docker_hub
+      requirements:
+       - host:
+           node: MICADO-worker
+           relationship: tosca.relationships.HostedOn
+
 
     updater:
       type: tosca.nodes.MiCADO.Container.Application.Docker
@@ -82,15 +85,6 @@ topology_template:
            type: tosca.relationships.MiCADO.ConnectsTo
            properties:
              network: stressnet
-       - volume:
-           node: busydata
-           relationship:
-             type: tosca.relationships.AttachesTo
-             properties:
-               location: /tmp
-       - host:
-           node: MICADO-worker
-           relationship: tosca.relationships.HostedOn
 
     MICADO-worker:
        type: tosca.nodes.MiCADO.Occopus.CloudSigma.Compute
