--- a/system/key_config.yml
+++ b/system/key_config.yml
@@ -1,7 +1,7 @@
 key_config:
   DummySeAdaptor:
     - "tosca.nodes.MiCADO.Container.Application.Docker"
-  DummyPkAdaptor:
+  ScalingPolicyAdaptor:
     - "tosca.nodes.MiCADO.Container.Application.Docker"
 
   DockerAdaptor:
