Add ScalingPolicyAdaptor to keyconfig, uncomment to use

--- a/system/key_config.yml
+++ b/system/key_config.yml
@@ -1,9 +1,10 @@
 key_config:
   DummySeAdaptor:
     - "tosca.nodes.MiCADO.Container.Application.Docker"
-  ScalingPolicyAdaptor:
+  DummyPkAdaptor:
     - "tosca.nodes.MiCADO.Container.Application.Docker"
-
+#  ScalingPolicyAdaptor:
+#    - "tosca.nodes.MiCADO.Container.Application.Docker"
   DockerAdaptor:
     #DockerAdaptor
     - "tosca.nodes.MiCADO.Container.Application.Docker"
