--- a/system/key_config.yml
+++ b/system/key_config.yml
@@ -1,17 +1,16 @@
 config:
   dry_run: True
   path_log: "/Users/greg/Desktop/work/COLA/submitter/greg_fork/component_submitter/submitter.log"
+  volume: "/Users/greg/Desktop/work/COLA/submitter/greg_fork/component_submitter/files/output_configs/"
 
 Adaptor_config:
  DummySeAdaptor:
    types:
      - "tosca.policies.Scaling.*"
    endoint: "endpoint"
-   dry_run: True
 
 
  DockerAdaptor:
    types:
      - "tosca.nodes.MiCADO.Container.Application.Docker"
    endoint: "endpoint"
-   dry_run: True
