--- a/system/key_config.yml
+++ b/system/key_config.yml
@@ -1,17 +1,17 @@
 config:
-  dry_run: True
-  path_log: "/Users/greg/Desktop/work/COLA/submitter/greg_fork/component_submitter/submitter.log"
+  dry_run: False
+  path_log: "/var/lib/submitter/submitter.log"
 
 Adaptor_config:
  DummySeAdaptor:
    types:
      - "tosca.policies.Scaling.*"
    endoint: "endpoint"
-   volume: "/Users/greg/Desktop/work/COLA/submitter/greg_fork/component_submitter/files/output_configs/"
+   volume: "/var/lib/submitter/security_workdir_example/"
 
 
  DockerAdaptor:
    types:
      - "tosca.nodes.MiCADO.Container.Application.Docker"
    endoint: "endpoint"
-   volume: "/Users/greg/Desktop/work/COLA/submitter/greg_fork/component_submitter/files/output_configs/"
+   volume: "/var/lib/submitter/files/output_configs/"
