--- a/system/key_config.yml
+++ b/system/key_config.yml
@@ -3,15 +3,15 @@ config:
   path_log: "/Users/greg/Desktop/work/COLA/submitter/greg_fork/component_submitter/submitter.log"
 
 Adaptor_config:
- DummySeAdaptor:
+ SecurityEnforcerAdaptor:
    types:
-     - "tosca.policies.Scaling.*"
-   endoint: "endpoint"
+     - "tosca.policies.DockerSecretDistribution"
+   endpoint: "http://127.0.0.1:5001/v1.0"
    volume: "/Users/greg/Desktop/work/COLA/submitter/greg_fork/component_submitter/files/output_configs/"
 
 
  DockerAdaptor:
    types:
      - "tosca.nodes.MiCADO.Container.Application.Docker"
-   endoint: "endpoint"
+   endpoint: "endpoint"
    volume: "/Users/greg/Desktop/work/COLA/submitter/greg_fork/component_submitter/files/output_configs/"
