--- a/system/key_config.yml
+++ b/system/key_config.yml
@@ -6,12 +6,18 @@ Adaptor_config:
  SecurityEnforcerAdaptor:
    types:
      - "tosca.policies.Scaling.*"
-   endoint: "endpoint"
+   endpoint: "endpoint"
    volume: "/var/lib/submitter/security_workdir_example/"
 
 
  DockerAdaptor:
    types:
      - "tosca.nodes.MiCADO.Container.Application.Docker"
-   endoint: "endpoint"
+   endpoint: "endpoint"
+   volume: "/var/lib/submitter/files/output_configs/"
+
+PkAdaptor:
+   types:
+     - "tosca.policies.Scaling.MiCADO"
+   endpoint: "policykeeper:12345"
    volume: "/var/lib/submitter/files/output_configs/"
