--- a/system/key_config.yml
+++ b/system/key_config.yml
@@ -1,17 +1,18 @@
 config:
-  dry_run: False
-  path_log: "/var/lib/submitter/submitter.log"
-
+  dry_run: True
+#  path_log: "/var/lib/submitter/submitter.log"
+  path_log: "submitter.log"
 Adaptor_config:
  SecurityEnforcerAdaptor:
    types:
      - "tosca.policies.Scaling.*"
    endoint: "endpoint"
-   volume: "/var/lib/submitter/security_workdir_example/"
+  # volume: "/var/lib/submitter/security_workdir_example/"
 
 
  DockerAdaptor:
    types:
      - "tosca.nodes.MiCADO.Container.Application.Docker"
    endoint: "endpoint"
-   volume: "/var/lib/submitter/files/output_configs/"
+   #volume: "/var/lib/submitter/files/output_configs/"
+   volume: "files/output_configs"
