--- a/system/key_config.yml
+++ b/system/key_config.yml
@@ -1,33 +1,57 @@
-main_config:
-  dry_run: True
-  path_log: "/var/lib/submitter/submitter.log"
-
+config:
+  dry_run: False
+  #path_log: "/var/lib/toscasubmitter/submitter.log"
+  path_log: "submitter.log"
 step:
   translate:
     - SecurityEnforcerAdaptor
     - DockerAdaptor
+    - OccopusAdaptor
+    - PkAdaptor
   execute:
     - DockerAdaptor
     - SecurityEnforcerAdaptor
+    - OccopusAdaptor
+    - PkAdaptor
   update:
     - DockerAdaptor
     - SecurityEnforcerAdaptor
+    - OccopusAdaptor
+    - PkAdaptor
   undeploy:
     - SecurityEnforcerAdaptor
     - DockerAdaptor
+    - OccopusAdaptor
+    - PkAdaptor
   cleanup:
     - DockerAdaptor
     - SecurityEnforcerAdaptor
-
+    - OccopusAdaptor
+    - PkAdaptor
 
 adaptor_config:
  SecurityEnforcerAdaptor:
    types:
-     - "tosca.policies.DockerSecretDistribution"
-   endpoint: "http://127.0.0.1:5001/v1.0"
-
+     - "tosca.policies.Scaling.*"
+   endoint: "endpoint"
+   volume: "/var/lib/submitter/security_workdir_example/"
 
  DockerAdaptor:
    types:
      - "tosca.nodes.MiCADO.Container.Application.Docker"
+   endoint: "endpoint"
+   volume: "/var/lib/submitter/files/output_configs/"
+
+
+ OccopusAdaptor:
+   types:
+     - "tosca.nodes.MiCADO.Occopus.*"
+   endoint: "endpoint"
+   volume: "/var/lib/submitter/files/output_configs/"
+
+
+ PkAdaptor:
+   types:
+     - "tosca.policies.Scaling.MiCADO"
+   endpoint: "policykeeper:12345"
    volume: "/var/lib/submitter/files/output_configs/"
