--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
 script:
   - python -m unittest tests.test_validator.TestValidation
   - python -m unittest tests.test_docker.TestDockerAdaptor
-  - python -m unittest tests.test_submitter_config.TestSubmitter
+  - python -m unittest tests.test_submitter_config.TestSubmitterConfig
   - python -m unittest tests.test_micado_parser.TestMiCADOParser
