--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ chardet==3.0.4
 click==6.7
 cliff==2.11.0
 cmd2==0.8.5
-Flask==0.12.2
+docker==3.3.0
+Flask==1.0.2
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
@@ -20,7 +21,7 @@ requests==2.18.4
 ruamel.yaml==0.15.37
 six==1.11.0
 stevedore==1.28.0
-tosca-parser==0.9.0
+tosca-parser==1.1.0
 urllib3==1.22
 wcwidth==0.1.7
 Werkzeug==0.14.1
