--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,6 @@ files/templates/*.yml
 system/ids.json
 .vscode
 micado_application.py
+system/cloud_init_worker.yaml
+system/infrastructure_descriptor.yaml
+system/ids.json
