Correcting logs for URL or local file templates
Improving logging levels and messages

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,8 @@ micado_application.py
 system/cloud_init_worker.yaml
 system/infrastructure_descriptor.yaml
 system/ids.json
+run-flask.sh
+stressng.yaml
+system/key_config.yml
+call_api.py
+.gitignore
