--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ install:
   - pip install flask
   - pip install ruamel.yaml
   - pip install docker
+  - pip install kubernetes
 script:
   - python -m unittest tests.test_validator.TestValidation
   - python -m unittest tests.test_submitter_config.TestSubmitterConfig
   - python -m unittest tests.test_micado_parser.TestMiCADOParser
+  - python -m unittest tests.test_k8s_translation.TestK8sTranslation
