--- a/system/key_config.yml
+++ b/system/key_config.yml
@@ -1,6 +1,27 @@
 main_config:
-  log_level: INFO
-  path_log: "submitter.log"
+  dry_run: True
+logging:
+    version: 1
+    root:
+        level: DEBUG
+        handlers: [console, file]
+    formatters:
+        simpleFormatter:
+            format: "%(asctime)s %(name)s %(levelname)s %(message)s"
+    handlers:
+        console:
+            class: logging.StreamHandler
+            formatter: simpleFormatter
+            level: DEBUG
+            stream: ext://sys.stdout
+        file:
+            class : logging.handlers.RotatingFileHandler
+            formatter: simpleFormatter
+            mode: a
+            level: DEBUG
+            filename: /var/log/submitter/submitter.log
+            maxBytes: 52428800
+            backupCount: 3
 
 step:
   translate:
