Switch to pykube-ng, bump other packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,6 @@
-Babel==2.5.3
-certifi==2018.4.16
-chardet==3.0.4
-click==6.7
-cliff==2.11.0
-cmd2==0.8.5
-docker==3.3.0
-Flask==1.0.2
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10.1
-kubernetes==9.0.0
-MarkupSafe==1.0
-pbr==4.0.2
-prettytable==0.7.2
-pyparsing==2.2.0
-pyperclip==1.6.0
-python-dateutil==2.7.2
-pytz==2018.4
-requests==2.20.1
-ruamel.yaml==0.15.37
-six==1.11.0
-stevedore==1.28.0
-tosca-parser==1.1.0
-urllib3==1.24.2
-wcwidth==0.1.7
-Werkzeug==0.14.1
+docker==4.0.2
+Flask==1.1.1
+pykube-ng==0.28
+requests==2.22.0
+ruamel.yaml==0.16.2
+tosca-parser==1.4.0
