Move to gunicorn

--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -17,6 +17,6 @@ WORKDIR /var/lib/micado/submitter
 
 COPY submitter .
 
-ENV LC_ALL=C.UTF-8 LANG=C.UTF-8 PYTHONPATH=/var/lib/micado FLASK_APP=api.py
+ENV LC_ALL=C.UTF-8 LANG=C.UTF-8 PYTHONPATH=/var/lib/micado
 
-ENTRYPOINT ["flask", "run"]
+ENTRYPOINT ["gunicorn", "submitter.api:app", "--timeout", "600", "--workers", "1"]
