test: add some micado_parser tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ script:
   - python -m unittest tests.test_validator.TestValidation
   - python -m unittest tests.test_submitter_config.TestSubmitterConfig
   - python -m unittest tests.test_k8s_adaptor
+  - python -m unittest tests.test_micado_parser
