--- a/tests/templates/custom_types.yaml
+++ b/tests/templates/custom_types.yaml
@@ -305,14 +305,16 @@ node_types:
     description: Basic EC2 VM for MiCADO, by Terraform, on eu-west-2
     derived_from: tosca.nodes.MiCADO.EC2.Compute
     properties:
-      region_name:
+      endpoint:
         type: string
-        default: eu-west-2
+        default: https://ec2.terraform.eu-west-2.amazonaws.com
         required: true
     interfaces:
       Terraform:
         type: tosca.interfaces.MiCADO.Terraform
         create:
+          inputs:
+            endpoint: { get_property: [ SELF, endpoint ] }
             
   tosca.nodes.MiCADO.GCE.Compute:
     description: Google Compute Engine compute node
