--- a/tests/templates/tosca.yaml
+++ b/tests/templates/tosca.yaml
@@ -100,6 +100,7 @@ topology_template:
         - host: worker-node
         - volume: docker-binary-host-vol
         - volume: docker-socket-host-vol
+        - volume: local-vol
 
     docker-binary-host-vol:
       type: tosca.nodes.MiCADO.Container.Volume.HostPath
@@ -110,6 +111,12 @@ topology_template:
       type: tosca.nodes.MiCADO.Container.Volume.HostPath
       properties:
         path: /var/run/docker.sock
+
+    local-vol:
+      type: tosca.nodes.MiCADO.Container.Volume.Local
+      properties:
+        path: /shared/local
+        node: persistenty
 
     worker-node:
       type: tosca.nodes.MiCADO.EC2.Compute
