--- a/tests/templates/tosca.yaml
+++ b/tests/templates/tosca.yaml
@@ -1,4 +1,4 @@
-tosca_definitions_version: tosca_simple_yaml_1_0
+tosca_definitions_version: tosca_simple_yaml_1_3
 
 imports:
   - custom_types.yaml
@@ -61,6 +61,7 @@ topology_template:
 
     redis:
       type: tosca.nodes.MiCADO.Container.Application.Docker.Deployment
+      occurrences: [1, 5]
       properties:
         image: redis
         command:
