--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ kubernetes-validate==1.18.0
 webargs==6.1.0
 marshmallow==3.7.1
 gunicorn==20.0.4
-git+git://github.com/micado-scale/micado-parser@main#egg=micado-parser
+micado-parser
