--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-docker==4.2.1
-Flask==1.1.2
-pykube-ng==20.5.0
+docker==4.2.2
+Flask==2.0.3
+Jinja2==3.0.0
+pykube-ng==20.7.2
 requests==2.24.0
-ruamel.yaml==0.17.17
+ruamel.yaml==0.16.10
 tosca-parser==2.5.0
 kubernetes-validate==1.18.0
-webargs==6.1.0
-marshmallow==3.7.1
-gunicorn==20.0.4
-micado-parser~=0.10.0
+webargs==8.1.0
+marshmallow==3.14.1
+gunicorn==20.1.0
+micado-parser~=0.10.4
+
