--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -7,7 +7,8 @@ WORKDIR /install
 
 COPY requirements.txt /requirements.txt
 
-RUN pip3 install --prefix=/install --no-warn-script-location -r /requirements.txt
+RUN apk add musl-dev gcc \
+    && pip3 install --prefix=/install --no-warn-script-location -r /requirements.txt
 
 FROM base
 
