--- a/tests/templates/tosca.yaml
+++ b/tests/templates/tosca.yaml
@@ -138,6 +138,7 @@ topology_template:
       type: tosca.nodes.MiCADO.EC2.Compute.Terra
       properties:
         <<: *compute_properties
+        endpoint: https://mycloud.net/api/terra/v2
       
   policies:
     - scalability:
