--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+ansible~=8.5.0
+ansible-runner~=2.3.4
 Flask==2.3.2
 requests==2.31.0
 ruamel.yaml==0.17.17
@@ -8,4 +10,3 @@ webargs==6.1.0
 marshmallow==3.7.1
 gunicorn==20.0.4
 micado-parser~=0.12.0
-ansible-runner
