chore: bump playbook version

--- a/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.3/playbook/project/roles/micado_edge/join/tasks/edge_join.yml
+++ b/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.3/playbook/project/roles/micado_edge/join/tasks/edge_join.yml
@@ -8,13 +8,9 @@
     dest: /tmp/get-micado-edge.sh
     mode: '0777'
   when: 
-    - '"edgecore.service" not in services'
-    - 'or'
-    - 'services["edgecore.service"].state != "running"'
+    - '"edgecore.service" not in services or services["edgecore.service"].state != "running"'
 
 - name: (edge) Install MiCADO Edge
   command: /tmp/get-micado-edge.sh
   when: 
-    - '"edgecore.service" not in services'
-    - 'or'
-    - 'services["edgecore.service"].state != "running"'
+    - '"edgecore.service" not in services or services["edgecore.service"].state != "running"'
