feat(edge): bump edge playbk

--- a/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.3/playbook/project/edge.yml
+++ b/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.3/playbook/project/edge.yml
@@ -32,6 +32,8 @@
     command: /etc/kubernetes/keadm-v{{ packages.kube_edge }}-linux-amd64/keadm/keadm gettoken
           --kube-config /root/.kube/config
     register: token_kubeedge
+    until: token_kubeedge is not failed
+    retries: 5
     changed_when: False
     tags:
     - build
