fix: update edge playbook

--- a/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.4/playbook/project/group_vars/all.yml
+++ b/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.4/playbook/project/group_vars/all.yml
@@ -1,6 +1,8 @@
 # config file for global MiCADO settings
 # =======================================================
 
+# Registry credentials path
+registry_cred_path: credentials/credentials-registries.yml
 
 # =======================================================
 # end of user options. do not edit under this line
