--- a/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.4/playbook/project/host_vars/micado.yml
+++ b/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.4/playbook/project/host_vars/micado.yml
@@ -6,6 +6,7 @@
 cloud_cred_path: credentials/credentials-cloud-api.yml
 gce_cred_path: credentials/credentials-gce.json
 oci_key_path: credentials/credentials-oci-key.pem
+registry_cred_path: credentials/credentials-registries.yml
 micado_cred_path: credentials/credentials-micado.yml
 
 # enable specific components
