--- a/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.4/playbook/project/roles/micado_agent/tasks/join.yml
+++ b/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.4/playbook/project/roles/micado_agent/tasks/join.yml
@@ -1,10 +1,7 @@
 ---
-- name: Join k3s cluster
-  shell: curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="agent" sh -s - 
-    --server "https://{{ hostvars['micado']['ansible_host'] }}:6443"
-    --node-name "{{ inventory_hostname | lower }}"
-    --token "{{ hostvars['micado']['k3s_token']['content'] | b64decode | trim }}"
-    --node-external-ip "{{ ansible_host }}"
+- name: Run k3s agent uninstall script
+  command: k3s-agent-uninstall.sh
+  ignore_errors: yes
 
 - name: (registries) Ensure /etc/rancher/k3s directory
   file:
@@ -18,3 +15,10 @@
     content: "{{ hostvars['micado']['registries_content']['content'] | b64decode }}"
     dest: /etc/rancher/k3s/registries.yaml
   when: hostvars['micado']['registries_file'].stat.exists
+
+- name: Join k3s cluster
+  shell: curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="agent" sh -s - 
+    --server "https://{{ hostvars['micado']['ansible_host'] }}:6443"
+    --node-name "{{ inventory_hostname | lower }}"
+    --token "{{ hostvars['micado']['k3s_token']['content'] | b64decode | trim }}"
+    --node-external-ip "{{ ansible_host }}"
